grammar.txt
<STATEMENT> ::= 'Int'/'Float' <identifier> '=' <EXPRESSION> ';'
              | 'Int'/'Float' <identifier> ';'
              | <EXPRESSION> ';'

<EXPRESSION> ::= <assignment> (',' <assignment>)*

<assignment> ::= <identifier> '=' <COMP_EXPRESSION>
               | <identifier>

<COMP_EXPRESSION> ::= '!' <COMP_EXPRESSION>
                    | <ARITH_EXPRESSION> ( ('==' | '!=' | '<' | '>' | '<=' | '>=') <ARITH_EXPRESSION> )*

<ARITH_EXPRESSION> ::= <TERM> ( ('+' | '-') <TERM> )*

<TERM> ::= <FACTOR> ( ('*' | '/') <FACTOR> )*

<FACTOR> ::= ( ('+' | '-')* <EXPRESSION> )
           | <POWER>

<POWER> ::= <ATOM> ('^' <FACTOR>)*

<ATOM> ::= <identifier>
         | <INT>
         | <FLOAT>
         | '(' <EXPRESSION> ')'
         | Cast<Int/Float>(<EXPRESSION>)
